--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ site_description: >-
 copyright: Copyright &copy; 2020 - 2042 Alex The Creator. All Rights Reserved.
 
 # Repository
-repo_name: Al666ex
+repo_name: al666ex
 repo_url: https://github.com/chinabiue/al666ex
 edit_uri: edit/main/docs/
 
@@ -17,28 +17,21 @@ theme:
   name: material
   custom_dir: docs/assets/overrides
   palette:
-    - media: "(prefers-color-scheme)"
+    # - media: "(prefers-color-scheme: dark)"
+    - scheme: slate
+      accent: amber
       toggle:
-        icon: material/link
-        name: Let there be light
-    - media: "(prefers-color-scheme: light)"
-      scheme: default
-      primary: teal
-      accent: yellow
+        icon: material/brightness-2
+        name: "Switch to light mode"
+    # - media: "(prefers-color-scheme: light)"
+    - scheme: default
+      accent: deep purple
       toggle:
-        icon: material/toggle-switch
-        name: Let there be dark
-    - media: "(prefers-color-scheme: dark)"
-      scheme: slate
-      primary: black
-      accent: yellow
-      toggle:
-        icon: material/toggle-switch-off
-        name: Let it be
+        icon: material/brightness-5
+        name: "Switch to dark mode"
 
   features:
     - search.suggest
-    - navigation.footer
     - search.highlight
     - content.tabs.link
     - content.footnote.tooltips
@@ -48,6 +41,7 @@ theme:
     - content.action.edit
     - content.action.view
     - navigation.tabs.sticky
+    - navigation.footer
     - navigation.tabs
     - navigation.top
     - navigation.expand
@@ -59,8 +53,7 @@ theme:
   logo: assets/img/favicon.ico
   favicon: assets/img/favicon.ico
   icon:
-    annotation: material/arrow-right-circle
-    # repo: fontawesome/solid/trash
+    annotation: material/plus-circle-outline
     edit: material/file-edit
     view: material/file-eye
   language: en
@@ -73,10 +66,6 @@ plugins:
       enable_creation_date: true
       enabled: true
   - git-authors
-  # - git-committers:
-  #     enabled: true
-  #     repository: chinabiue/al666ex
-  #     branch: main
   - blog:
       blog_toc: true
       categories_toc: true
@@ -94,17 +83,22 @@ plugins:
 # Extensions
 markdown_extensions:
   - tables
+  - def_list
   - attr_list
   - footnotes
   - admonition
   - md_in_html
   - pymdownx.keys
+  - pymdownx.caret
+  - pymdownx.critic
+  - pymdownx.mark
   - pymdownx.tilde
   - pymdownx.details
   - pymdownx.snippets
   - pymdownx.betterem
   - pymdownx.superfences
   - pymdownx.inlinehilite
+  - pymdownx.smartsymbols
   - toc:
       permalink: true
   - pymdownx.superfences:
@@ -124,11 +118,17 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.tasklist:
+      custom_checkbox: true
+      clickable_checkbox: true
   - mdx_include:
       base_path: docs
 
 # Additional configuration
 extra:
+  status:
+    new: Recently added
+    deprecated: Not valid anymore
   generator: false
   analytics:
     provider: google
@@ -146,25 +146,14 @@ extra:
           data: 0
           note: >-
             Thanks for your feedback! 你开心就好！
-  # social:
-  #   - icon: fontawesome/brands/pied-piper-alt
-  #     link: https://al666ex.pages.dev/
-  #     name: Alex The Creator
-  #   - icon: fontawesome/solid/paper-plane
-  #     link: mailto:chinabiue@aliyun.com
-  #     name: "42"
 
 extra_javascript:
-  - assets/js/katex.js
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
   - assets/js/custom.js
+  - assets/js/katex.js
 
 extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
-  - assets/css/extra.css
-  - assets/css/custom.7c86dd97.min.css
-
-nav:
-  - Home: index.md
-  - Blog: blog/index.md
+  - assets/css/custom.css
+  - assets/css/plugin.css
