--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Babel==2.14.0
 cairocffi==1.7.0
 CairoSVG==2.7.1
-certifi==2024.2.2
+certifi>=2024.07.04
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
